# mterm

./: .gitignore  CMakeLists.txt  ColoredTextBuffer.cpp  ColoredTextBuffer.h  PseudoConsole.cpp  PseudoConsole.h  README.md  Window.cpp  Window.h  bindings.cpp  defaults.h  main.cpp  mterm.cpp  mterm.h  pty.cpp  pty.h  pyrightconfig.json  renderer.cpp  renderer.h  resource.h  resource.rc  terminal.cpp  terminal.h  terminal_renderer.cpp  terminal_renderer.h  utils.cpp  utils.h
core/: .clang-format  CMakeLists.txt  ColoredTextBuffer.cpp  ColoredTextBuffer.h  PseudoConsole.cpp  PseudoConsole.h  Utils.cpp  Utils.h  Window.cpp  Window.h  bindings.cpp
lib/: readme.txt
modules/: config.wren  main.wren  renderer.wren
py/: app.py  config.py  cursors.py  main.py  terminal.py  theme.py  window.py
py/base/: __init__.py  app.py  selector_color_helper.py  terminal.py  terminal_with_selection.py
py/core/: __init__.py  buttons.py  cursors.py  keys.py  mterm.pyi  readme.txt  window.py
py/user/: app.py  highlight.py  terminal.py  terminal_with_selection.py  theme.py
